--- a/pipe-gui/pom.xml
+++ b/pipe-gui/pom.xml
@@ -7,7 +7,6 @@
         <version>5.1.0-SNAPSHOT</version>
     </parent>
 
-
     <artifactId>PIPE-gui</artifactId>
     <packaging>jar</packaging>
 
@@ -166,7 +165,7 @@
         <dependency>
             <groupId>uk.ac.imperial</groupId>
             <artifactId>pipe-markov-chain</artifactId>
-            <version>1.0.1</version>
+            <version>1.0.2-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -240,7 +239,6 @@
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
-
 
         <dependency>
             <groupId>jfree</groupId>
