--- a/pipe-gui/pom.xml
+++ b/pipe-gui/pom.xml
@@ -178,6 +178,12 @@
             <groupId>maven</groupId>
             <artifactId>maven-abbot-plugin</artifactId>
             <version>1.1</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>xerces</groupId>  
+                    <artifactId>xercesImpl</artifactId> 
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
