--- a/pipe-gui/pom.xml
+++ b/pipe-gui/pom.xml
@@ -131,7 +131,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.9.1</version>
+                <version>2.10.4</version>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -165,7 +165,7 @@
         <dependency>
             <groupId>uk.ac.imperial</groupId>
             <artifactId>pipe-markov-chain</artifactId>
-            <version>1.0.2-SNAPSHOT</version>
+            <version>1.0.3-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -178,6 +178,12 @@
             <groupId>maven</groupId>
             <artifactId>maven-abbot-plugin</artifactId>
             <version>1.1</version>
+               <exclusions>
+			      <exclusion>
+                     <groupId>xerces</groupId>  
+                     <artifactId>xercesImpl</artifactId> 
+                 </exclusion>
+             </exclusions>
         </dependency>
 
         <dependency>
