--- a/pipe-gui/pom.xml
+++ b/pipe-gui/pom.xml
@@ -17,7 +17,7 @@
     <repositories>
         <repository>
             <id>PIPECore-mvn-repo</id>
-            <url>https://raw.github.com/sjdayday/PIPECore/mvn-repo/</url> <!-- only for 1.1.0-SNAPSHOT -->
+            <url>https://raw.github.com/sarahtattersall/PIPECore/mvn-repo/</url>
             <snapshots>
                 <enabled>true</enabled>
                 <updatePolicy>always</updatePolicy>
@@ -165,7 +165,7 @@
         <dependency>
             <groupId>uk.ac.imperial</groupId>
             <artifactId>pipe-markov-chain</artifactId>
-            <version>1.0.3-SNAPSHOT</version>
+            <version>1.1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
