pom.xml: Add JAXB dependency
Since JDK9, JAXB is deprecated and was entirely removed in JDK11.
This change adds version 2.3.0 (used in JDK9) as an explicit
dependency to instruct maven to include it in the generated archive.

--- a/pom.xml
+++ b/pom.xml
@@ -74,4 +74,11 @@
         </repository>
     </distributionManagement>
 
+    <dependencies>
+	    <dependency>
+		    <groupId>javax.xml.bind</groupId>
+		    <artifactId>jaxb-api</artifactId>
+		    <version>2.3.0</version>
+	    </dependency>
+    </dependencies>
 </project>
